ADD disable update button if needed + fixes

--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -327,8 +327,8 @@
                     <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_PROD_SPEC._bundle' | translate }}</h2>
                     <div class="col-span-2 flex align-items-middle h-fit m-4">
                         <label for="prod-brand" class="font-bold text-lg">{{ 'UPDATE_PROD_SPEC._is_bundled' | translate }}</label>
-                        <label class="inline-flex items-center me-5 cursor-pointer ml-4">
-                            <input type="checkbox" [checked]="bundleChecked" (change)="toggleBundleCheck()" value="" class="sr-only peer">
+                        <label class="inline-flex items-center me-5 ml-4">
+                            <input type="checkbox" disabled [checked]="bundleChecked" value="" class="sr-only peer">
                             <div class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
                         </label>
                     </div>
@@ -391,7 +391,7 @@
                                                 {{prod.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
                                             </td>
                                             <td class="px-6 py-4">
-                                                <input id="select-checkbox" [checked]="isProdInBundle(prod)" type="checkbox" value="" (click)="addProdToBundle(prod)" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                                <input id="select-checkbox" [checked]="isProdInBundle(prod)" type="checkbox" value="" disabled class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                                             </td>
                                         </tr>
                                     }
@@ -1511,7 +1511,7 @@
                             </div>
                         }
                         <div class="flex w-full justify-items-end justify-end ml-4">
-                            <button type="button" (click)="updateProduct();" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                            <button type="button" (click)="updateProduct();" [disabled]="isProdValid()" [ngClass]="isProdValid() ? 'opacity-50' : 'hover:bg-primary-50'"  class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                                 {{ 'UPDATE_PROD_SPEC._update_prod' | translate }}
                                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
