Read user roles in chatbot

--- a/src/app/chatbot-widget/chatbot-widget.component.css
+++ b/src/app/chatbot-widget/chatbot-widget.component.css
@@ -1,4 +1,4 @@
-.chatbot-widget, * {
+.chatbot-widget, .chatbot-widget * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@
     background: #F1F1F1;
 }
 
-.chatbot-widget, * {
+.chatbot-widget * {
     --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
     --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
     --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
@@ -52,7 +52,7 @@
     text-align: right;
 }
 
-.send__button {
+.chatbox-send__button {
     padding: 6px;
     background: transparent;
     border: none;
