--- a/src/app/chatbot-widget/chatbot-widget.component.html
+++ b/src/app/chatbot-widget/chatbot-widget.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="chatbox__footer">
         <input type="text" placeholder="Write a message..." (keyup)="onKeyUp($event)">
-          <button class="chatbox__send--footer send__button" (click)="onSendButton()">Send</button>
+          <button class="chatbox__send--footer chatbox-send__button" (click)="onSendButton()">Send</button>
       </div>
     </div>
     <div class="chatbox__button" (click)="toggleState()">
