ADD offer's update form

--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -62,5 +62,8 @@
         @if(show_update_res_spec){
           <update-resource-spec [res]="res_to_update"></update-resource-spec>
         }
+        @if(show_update_offer){
+          <update-offer [offer]="offer_to_update"></update-offer>
+        }
     </div>
 </div>
