--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/seller-catalogs.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/seller-catalogs.component.html
@@ -19,7 +19,7 @@
                     </button>
                 </div>
               </form>
-            <button type="button" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
+            <button type="button" (click)="goToCreate()" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
                 <p class="pl-2 pr-2">{{ 'OFFERINGS._add_new_catalog' | translate }}</p>
                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
@@ -52,7 +52,7 @@
             <ul class="space-y-2 text-sm" aria-labelledby="dropdownDefault">
   
                 <li class="flex items-center">
-                <input id="active" type="checkbox" value="" checked (change)="onStateFilterChange('active')"
+                <input id="active" type="checkbox" value="" checked (change)="onStateFilterChange('Active')"
                     class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
     
                 <label for="active" class="ml-2 text-sm font-medium text-gray-900">
@@ -61,7 +61,7 @@
                 </li>
     
                 <li class="flex items-center">
-                <input id="launched" type="checkbox" value="" (change)="onStateFilterChange('launched')"
+                <input id="launched" type="checkbox" value="" checked (change)="onStateFilterChange('Launched')"
                     class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
     
                 <label for="launched" class="ml-2 text-sm font-medium text-gray-900">
@@ -70,7 +70,7 @@
                 </li>
     
                 <li class="flex items-center">
-                <input id="retired" type="checkbox" value="" (change)="onStateFilterChange('retired')"
+                <input id="retired" type="checkbox" value="" (change)="onStateFilterChange('Retired')"
                     class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
     
                 <label for="retired" class="ml-2 text-sm font-medium text-gray-900">
@@ -79,7 +79,7 @@
                 </li>
 
                 <li class="flex items-center">
-                  <input id="obsolete" type="checkbox" value="" (change)="onStateFilterChange('obsolete')"
+                  <input id="obsolete" type="checkbox" value="" (change)="onStateFilterChange('Obsolete')"
                       class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
       
                   <label for="obsolete" class="ml-2 text-sm font-medium text-gray-900">
@@ -144,9 +144,6 @@
                         {{ 'OFFERINGS._role' | translate }}
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        {{ 'OFFERINGS._last_update' | translate }}
-                    </th>
-                    <th scope="col" class="px-6 py-3">
                         {{ 'OFFERINGS._actions' | translate }}
                     </th>
                 </tr>
@@ -158,24 +155,21 @@
                             {{cat.name}}
                         </td>
                         <td class="px-6 py-4">
-                            @if(cat.lifecycleStatus == 'active'){
+                            @if(cat.lifecycleStatus == 'Active'){
                                 <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{cat.lifecycleStatus}}</span>
                             } @else if(cat.lifecycleStatus == 'Launched') {
                                 <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{cat.lifecycleStatus}}</span>
-                            } @else if(cat.lifecycleStatus == 'suspended') {
+                            } @else if(cat.lifecycleStatus == 'Retired') {
                                 <span class="bg-blue-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{cat.lifecycleStatus}}</span>
-                            } @else if(cat.lifecycleStatus == 'terminated') {
+                            } @else if(cat.lifecycleStatus == 'Obsolete') {
                                 <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{cat.lifecycleStatus}}</span>
                             }
                         </td>
                         <td class="px-6 py-4">
-                            
+                            {{cat.relatedParty?.at(0)?.role}}
                         </td>
                         <td class="px-6 py-4">
-                            {{cat.lastUpdate}}
-                        </td>
-                        <td class="px-6 py-4">
-                            <button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                            <button type="button" (click)="goToUpdate(cat)" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                     <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
                                 </svg>
