--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1024,13 +1024,13 @@
                         </table>
                     </div>
                 }
-                <div class="col-span-2 flex align-items-middle h-fit m-4">
+                <!--<div class="col-span-2 flex align-items-middle h-fit m-4">
                     <label for="prod-brand" class="font-bold text-lg">{{ 'UPDATE_OFFER._is_free_price' | translate }}</label>
                     <label class="inline-flex items-center me-5 cursor-pointer ml-4">
-                        <input type="checkbox" (change)="toggleFreePrice=!toggleFreePrice" value="" class="sr-only peer">
+                        <input type="checkbox" (change)="toggleOpenPrice=!toggleOpenPrice" value="" class="sr-only peer">
                         <div class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
                     </label>
-                </div>
+                </div>-->
                 @if(!showCreatePrice){
                     <div class="flex w-full justify-items-center justify-center ml-4">
                         <button type="button" (click)="showCreatePrice=!showCreatePrice" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
