--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -197,35 +197,46 @@
 
         <h2 class="text-4xl font-extrabold text-primary-100 text-center pb-8 pt-12">Product pricing</h2>
         <div class="grid grid-flow-col auto-cols-auto justify-items-center p-2">
-        @for (price of productOff?.productOfferingPrice; track price.id) {
-            @if (price.priceType == 'recurring') {
-                <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
-                    <div class="bg-green-500 rounded-t-lg w-full">
-                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 w-full">{{price.name}}</h5>
+        @if(productOff?.productOfferingPrice != undefined){
+            @for (price of productOff?.productOfferingPrice; track price.id) {
+                @if (price.priceType == 'recurring') {
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
+                        <div class="bg-green-500 rounded-t-lg w-full">
+                            <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 w-full">{{price.name}}</h5>
+                        </div>
+                        <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
+                        <p class="flex justify-center font-normal text-gray-700">/{{price.recurringChargePeriodType}}</p>
+                        <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
                     </div>
-                    <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                    <p class="flex justify-center font-normal text-gray-700">/{{price.recurringChargePeriodType}}</p>
-                    <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
-                </div>
-            } @else if (price.priceType == 'usage') {
-                <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
-                    <div class="bg-yellow-300 rounded-t-lg w-full">
-                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
+                } @else if (price.priceType == 'usage') {
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
+                        <div class="bg-yellow-300 rounded-t-lg w-full">
+                            <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
+                        </div>
+                        <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
+                        <p class="flex justify-center font-normal text-gray-700">/{{price.unitOfMeasure?.units}}</p>
+                        <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
                     </div>
-                    <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                    <p class="flex justify-center font-normal text-gray-700">/{{price.unitOfMeasure?.units}}</p>
-                    <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
-                </div>
-            } @else {
+                } @else {
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
+                        <div class="bg-blue-500 rounded-t-lg w-full">
+                            <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
+                        </div>
+                        <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
+                        <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
+                    </div>
+                }
+            }
+            @if(productOff?.productOfferingPrice?.length==0){
                 <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
                     <div class="bg-blue-500 rounded-t-lg w-full">
-                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
+                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
                     </div>
-                    <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                    <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
-                </div>
+                    <p class="flex justify-center mb-2 font-normal text-gray-700">{{ 'SHOPPING_CART._free_desc' | translate }}</p>
+                </div> 
             }
         }
+
         </div>
         
         @if(prodSpec.productSpecCharacteristic != undefined && prodSpec.productSpecCharacteristic.length>0) {
