ADD allow selecting default billing address on profile + show default billaddr selected on checkout

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -81,7 +81,7 @@
             <button (click)="goTo('/product-inventory')"class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faBoxesStacked" class="mr-2"></fa-icon>{{ 'HEADER._inventory' | translate }}</button>
           </li>
           <li>
-            <button (click)="goTo('/shopping-cart')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faCartShopping" class="mr-2"></fa-icon>{{ 'HEADER._cart' | translate }}</button>
+            <button (click)="goTo('/checkout')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faCartShopping" class="mr-2"></fa-icon>{{ 'HEADER._cart' | translate }}</button>
           </li>
         </ul>
         <div class="py-1">
