ADD sticky tabs on product description + ALLOW custom price section on product description

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -81,9 +81,8 @@
         </div>
     </div>
 <!-- END HEADER CARD -->
-
-    <div class="w-full h-full bg-secondary-50 rounded-lg p-4 dark:bg-white dark:border-gray-700 border-secondary-50 border">
-        <div class="text-sm font-medium text-center text-gray-600 border-b border-gray-300 ">
+    <div class=" sticky top-[72px] z-10 w-full h-full bg-secondary-50 rounded-t-lg pt-4 pr-4 pl-4 dark:bg-white dark:border-gray-700 border-secondary-50 border-t">
+        <div class="w-full text-sm font-medium text-center text-gray-600 border-b border-gray-300 inline-flex justify-between">
             <ul class="flex flex-wrap -mb-px">
                 <li class="mr-2">
                     <button id="details-button" (click)="goToDetails()"
@@ -124,7 +123,19 @@
                     </li>
                 }
             </ul>
+            @if(check_logged){
+            <button type="button" (click)="toggleCartSelection()" class="w-fit m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
+                <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
+                </svg>
+                {{ 'CARD._add_cart' | translate }}
+            </button>
+            }
         </div>
+    </div>      
+
+    <div class="w-full h-full bg-secondary-50 rounded-b-lg p-4 dark:bg-white dark:border-gray-700 border-secondary-50 border-b">        
+
         <div class="w-full bg-secondary-50/95 dark:bg-white/95 rounded-lg p-12">
 
             <h2 #detailsContent class="text-4xl font-extrabold text-primary-100 text-center pb-4">Description</h2>
@@ -217,6 +228,8 @@
                         <p class="flex justify-center font-normal text-gray-700">/{{price.unitOfMeasure?.units}}</p>
                         <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
                     </div>
+                } @else if (price.priceType == 'custom') {
+                    <markdown class="dark:text-gray-600 w-full" [data]="price?.description"></markdown>
                 } @else {
                     <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
                         <div class="bg-blue-500 rounded-t-lg w-full">
