--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -291,9 +291,15 @@
                                         {{item.name}}
                                     </td>
                                     @if(item.productOfferingPrice){
-                                        <td class="px-6 py-4 text-center align-middle">
-                                            {{item?.productOfferingPrice?.price}} {{item?.productOfferingPrice?.unit}} {{item?.productOfferingPrice?.text}}
-                                        </td>
+                                        @if(item.productOfferingPrice.priceType == 'custom'){
+                                            <td class="px-6 py-4 text-center align-middle">
+                                                Custom
+                                            </td>
+                                        } @else {
+                                            <td class="px-6 py-4 text-center align-middle">
+                                                {{item?.productOfferingPrice?.price}} {{item?.productOfferingPrice?.unit}} {{item?.productOfferingPrice?.text}}
+                                            </td>
+                                        }
                                     } @else {
                                         <td class="px-6 py-4 text-center align-middle">
                                             {{ 'SHOPPING_CART._free' | translate }}
@@ -311,7 +317,11 @@
                              @for (price of getTotalPrice(orderToShow.productOrderItem); track price) {
                                 <p class="flex block justify-end mr-2 text-sm text-gray-500">{{price.price}} {{price.unit}} {{price.text}}</p>
                              } @empty {
-                                <p class="flex flex-right text-gray-700 justify-end text-gray-500">Free</p>
+                                @if(check_custom==true){
+                                    <p class="flex flex-right text-gray-700 justify-end text-gray-500">Custom</p>
+                                } @else {
+                                    <p class="flex flex-right text-gray-700 justify-end text-gray-500">Free</p>
+                                }                                
                              }
                           </div>
                     </div>
