--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -958,7 +958,7 @@
                 </div>-->
                 @if(!showCreatePrice){
                     <div class="flex w-full justify-items-center justify-center ml-4">
-                        <button type="button" (click)="showCreatePrice=!showCreatePrice" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                        <button type="button" (click)="showCreatePrice=!showCreatePrice" [disabled]="checkCustom()" [ngClass]="checkCustom() ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'CREATE_OFFER._new_price' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
@@ -996,7 +996,9 @@
                                     <option value="ONE TIME">ONE TIME</option>
                                     <option value="RECURRING">RECURRING</option>
                                     <option value="USAGE">USAGE</option>
-                                    <option value="CUSTOM">CUSTOM</option>           
+                                    @if(createdPrices.length==0){
+                                        <option value="CUSTOM">CUSTOM</option>  
+                                    }                                             
                                 </select>
                                 @if(recurringSelected){
                                     <label class="font-bold text-lg">{{ 'CREATE_OFFER._choose_period' | translate }}</label>
