--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -173,27 +173,29 @@
                     @for (char of complianceProf; track char.id) {
                         <div class="w-1/3 px-4 mb-8">                
                             <div class="border border-2 rounded-lg shadow bg-white shadow-md p-8 h-full"
-                            [ngClass]="char.href == '#' ? 'border-red-400' : char.domesupported == true ? 'border-gray-400' : 'border-green-400'">
+                            [ngClass]="char.href == '#' ? 'border-red-400' : 'border-gray-400'">
                                 <h3 class="text-2xl font-bold mb-4">{{char.name}}</h3>            
                                 <div class="flex justify-between">
                                     @if (char.href == '#') {
-
                                         <a class="text-xs ml-4 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-red-200 text-red-700">
                                             Not achieved yet
                                         </a>
+                                        <!-- TODO: ADD EXPIRED when dome supported certs are expired-->
                                     } @else {
                                         <a class="mb-2 font-normal pl-4 text-primary-100" target="_blank" href="{{char.href}}">
                                             {{char.value}}
                                         </a>
-                                        @if(char.domesupported==true){
-                                            <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 text-gray-900">
-                                                Under evaluation
-                                            </a>
-                                        } @else {
+                                        <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 text-gray-900">
+                                            Self declared
+                                        </a>
+                                        <!--
+                                            TODO: WHEN VERIFIED APPLIED SHOW VERIFIED 
+                                            @if(char.domesupported==true && verified){
                                             <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-200 text-green-700">
-                                                Self declared
+                                                Dome verified
                                             </a>
-                                        }
+                                            }                                      
+                                        -->
                                     }
                                     @if(char.domesupported == true){
                                         <fa-icon [icon]="faAtom" class="fa-2xl text-primary-100 align-middle"></fa-icon>
