--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1698,6 +1698,8 @@
         </div>
     </div>
 }
-
+@if(showError){
+    <error-message class="fixed w-fit top-1/2 left-1/2" [message]="errorMessage"></error-message>
+}
 
 
