FIX card image z-index + FIX offer create bundle checked

--- a/src/app/chatbot-widget/chatbot-widget.component.html
+++ b/src/app/chatbot-widget/chatbot-widget.component.html
@@ -1,4 +1,4 @@
-<div class="container chatbot-widget fixed" style="bottom: 30px; right: 0;">
+<div class="container chatbot-widget fixed z-20" style="bottom: 30px; right: 0;">
   <div class="chatbox">
     @if(state){
       <div class="chatbox__support" [ngClass]="state ? 'chatbox__support chatbox--active' : ''">
